# Space-Game--Project-ChatCPP

SPACE GAME PROJECT CHATCPP/: CMakeLists.txt  main.cpp
SPACE GAME PROJECT CHATCPP/inc/Events/: abandonedplanetevent.h  crossthebeltevent.h  events.h  spacepiratesevent.h
SPACE GAME PROJECT CHATCPP/inc/Ship/: fastship.h  normalship.h  ship.h  shipgenerator.h  strongship.h
SPACE GAME PROJECT CHATCPP/src/events/: abandonedplanetevent.cpp  crossthebeltevent.cpp  spacepiratesevent.cpp
SPACE GAME PROJECT CHATCPP/src/ship/: shipgenerator.cpp  specialities(ship).cpp
